--- a/TopStories/Base.lproj/Main.storyboard
+++ b/TopStories/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellID" textLabel="LE2-dh-fm7" detailTextLabel="r1t-Om-DXl" style="IBUITableViewCellStyleSubtitle" id="MNO-Nv-Wqp">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="LE2-dh-fm7" detailTextLabel="r1t-Om-DXl" style="IBUITableViewCellStyleSubtitle" id="MNO-Nv-Wqp">
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="MNO-Nv-Wqp" id="iob-mH-gEg">
@@ -52,7 +52,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FEH-5z-iIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1023.2" y="62.518740629685162"/>
+            <point key="canvasLocation" x="849" y="63"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YO3-pa-T7K">
